server/deployment/k8s/customer-support-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-support-service
  labels:
    app: customer-support-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer-support-service
  template:
    metadata:
      labels:
        app: customer-support-service
    spec:
      containers:
      - name: customer-support-service
        image: loretta-bank/customer-support-service:latest
        ports:
        - containerPort: 8080
